--- a/css/app.css
+++ b/css/app.css
@@ -7,5 +7,5 @@
     width: 200px;
     position: fixed;
     left: 0; 
-    border-right: 1px solid;
+    border-right: 1px solid darkolivegreen;
 }
