--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,6 @@
+body{
+    max-height: 1000px;
+}
 .productimage {
     display: block;
     width: 150px;
@@ -14,4 +17,8 @@
     position: fixed;
     left: 0; 
     border-right: 1px solid darkolivegreen;
+}
+
+#productsection{
+    
 }
