--- a/css/app.css
+++ b/css/app.css
@@ -2,14 +2,12 @@ body{
     max-height: 1000px;
 }
 .productimage {
-    display: block;
     width: 150px;
     margin-right: 20px;
     border: 1px solid darkolivegreen;
 }
 
 .productprice{
-    display: block;
 }
 
 #leftnav-container{
@@ -20,5 +18,5 @@ body{
 }
 
 #productsection{
-    
+    height: 1000px;
 }
