--- a/css/app.css
+++ b/css/app.css
@@ -9,7 +9,6 @@ body{
 }
 .product-image {
     width: 150px;
-    margin-right: 30px;
 }
 
 
@@ -23,6 +22,7 @@ body{
 .product-card {
   flex: 1 16%;
   margin-left: 10px;
+  margin-top: 10px;
   border: 1px solid darkolivegreen;
 }
 
