--- a/css/app.css
+++ b/css/app.css
@@ -68,6 +68,7 @@ and (orientation : landscape) {
 and (min-device-width : 768px) 
 and (max-device-width : 1024px) 
 and (orientation : portrait) {
+    
 /* Styles */
 }
 
@@ -84,10 +85,13 @@ and (min-width : 1224px) {
     position: fixed;
     left: 0; 
     border-right: 1px solid darkolivegreen;
-}
-
-
-}
+    }
+    ul{
+        position: relative;
+        top: 20px;
+        
+    }
+} }
 
 /* Large screens ----------- */
 @media only screen 
