--- a/css/app.css
+++ b/css/app.css
@@ -69,8 +69,13 @@ and (min-device-width : 768px)
 and (max-device-width : 1024px) 
 and (orientation : portrait) {
 /* Styles */    
+    body{
+     font-family: arial;
+    } 
     header{
-     height: 200px;
+        height: 200px;
+    }
+         
     }
     
 
