--- a/css/app.css
+++ b/css/app.css
@@ -31,6 +31,7 @@ body{
     width: 200px;
     position: fixed;
     left: 0; 
+    top: 100px;
     border-right: 1px solid darkolivegreen;
     }
     
