--- a/css/app.css
+++ b/css/app.css
@@ -67,6 +67,7 @@ and (orientation : portrait) {
 }
 
 .product-card {
+  z-index: -3;
   flex: 1 16%;
   margin-left: 10px;
   margin-top: 10px;
@@ -74,11 +75,13 @@ and (orientation : portrait) {
 }
 
  #leftnav-container{
+     z-index: -1;
     width: 100%;
     position: fixed;
     left: 0; 
     top: 100px;
     border-bottom: 1px solid darkolivegreen;
+    border-top: 1px solid darkolivegreen;
     }
     
 
