--- a/css/app.css
+++ b/css/app.css
@@ -145,6 +145,11 @@ and (min-width : 1224px) {
         top: 50px;
         
     }
+    
+    div.pagenumbers{
+        width: 10px;
+        display: block;
+    }
 } 
 
 /* Large screens ----------- */
