--- a/css/app.css
+++ b/css/app.css
@@ -148,7 +148,7 @@ and (min-width : 1224px) {
     
     div.pagenumbers{
         width: 10px;
-        display: block;
+        border: 1px solid black;
     }
 } 
 
