--- a/css/app.css
+++ b/css/app.css
@@ -80,9 +80,15 @@ and (orientation : portrait) {
     width: 100%;
     position: fixed;
     left: 0; 
-    top: 100px;
+    top: 110px;
     border-bottom: 1px solid darkolivegreen;
     border-top: 1px solid darkolivegreen;
+    }
+    
+      ul.navbar-right{
+        position: relative;
+        top: 50px;
+        
     }
     
     div#leftnav ul li a:link{
