--- a/css/app.css
+++ b/css/app.css
@@ -80,7 +80,7 @@ and (orientation : portrait) {
     width: 100%;
     position: relativ;
     left: 0; 
-    top: 180px;
+    max-height: 200px;
     border-bottom: 1px solid darkolivegreen;
     border-top: 1px solid darkolivegreen;
     }
