--- a/css/app.css
+++ b/css/app.css
@@ -27,6 +27,33 @@ and (max-width : 320px) {
 and (min-device-width : 768px) 
 and (max-device-width : 1024px) {
 /* Styles */
+}
+
+/* iPads (landscape) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : landscape) {
+    #leftnav-container{
+    background:  green;
+     z-index: -1;
+    width: 100%;
+    position: relative;
+    top: 40px;
+    left: 0; 
+    max-height: 150px;
+    border-bottom: 1px solid darkolivegreen;
+    border-top: 1px solid darkolivegreen;
+    }
+/* Styles */
+}
+
+/* iPads (portrait) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : portrait) {
+/* Styles */    
     body{
      font-family: arial;
     } 
@@ -93,23 +120,6 @@ and (max-device-width : 1024px) {
         position: relative;
         top: 75px;
     }
-}
-
-/* iPads (landscape) ----------- */
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
-and (orientation : landscape) {
-/* Styles */
-}
-
-/* iPads (portrait) ----------- */
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
-and (orientation : portrait) {
-/* Styles */    
-
 
 }
 
