--- a/css/app.css
+++ b/css/app.css
@@ -13,7 +13,136 @@ and (max-device-width : 480px) {
 /* Smartphones (landscape) ----------- */
 @media only screen 
 and (min-width : 321px) {
+    
 /* Styles */
+  body{
+     font-family: arial;
+    } 
+    header{
+        height: 175px;
+        position: relative;
+        top: 30px;
+    }
+         
+#logo{
+    width: 70%;
+    position: relative;
+    top: -155px;
+}
+.product-image {
+    margin: 30px;
+    width: 150px;
+}
+
+
+.products {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.product-card {
+  z-index: -3;
+  flex: 1 16%;
+  margin-left: 10px;
+  margin-top: 10px;
+  border: 1px solid darkolivegreen;
+}
+
+ #leftnav-container{
+    background:  green;
+     z-index: -1;
+    width: 100%;
+    position: relative;
+    top: 40px;
+    left: 0; 
+    max-height: 150px;
+    border-bottom: 1px solid darkolivegreen;
+    border-top: 1px solid darkolivegreen;
+    }
+    
+      ul.navbar-right{
+        position: relative;
+        top: 50px;
+        
+    }
+    
+    div#leftnav ul li a:link{
+        color: #fff;
+    }
+    
+    div#leftnav ul li a:visited{
+        color: #fff;
+    }
+    div#leftnav ul li{
+        color: #fff;
+    }
+    
+    #productsection{
+        position: relative;
+        top: 75px;
+    }
+
+}
+
+/* Desktops and laptops ----------- */
+@media only screen 
+and (min-width : 1024px) {
+    /* Styles */
+ body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#logo{
+    width: 50%;
+    position: relative;
+    top: -100px;
+}
+.product-image {
+    margin: 30px;
+    width: 150px;
+}
+
+
+
+
+.products {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.product-card {
+  flex: 1 16%;
+  margin-left: 10px;
+  margin-top: 10px;
+  border: 1px solid darkolivegreen;
+}
+
+    #leftnav-container{
+    background:  green;
+    width: 200px;
+    position: fixed;
+    left: 0; 
+    top: 150px;
+    border-right: 1px solid darkolivegreen;
+    }
+    
+
+    ul.navbar-right{
+        position: relative;
+        top: 50px;
+        
+    }
+    
+     div#leftnav ul li a:link{
+        color: #fff;
+    }
+    
+    div#leftnav ul li a:visited{
+        color: #fff;
+    }
+    div#leftnav ul li{
+        color: #fff;
+    }
 }
 
 /* Smartphones (portrait) ----------- */
