--- a/css/app.css
+++ b/css/app.css
@@ -54,11 +54,13 @@ and (min-width : 321px) {
     width: 100%;
     position: relative;
     top: 40px;
-    left: 0; 
+    left: 1000px; 
     max-height: 150px;
     border-bottom: 1px solid darkolivegreen;
     border-top: 1px solid darkolivegreen;
     }
+    
+    
     
       ul.navbar-right{
         position: relative;
@@ -81,6 +83,12 @@ and (min-width : 321px) {
         position: relative;
         top: 75px;
     }
+    
+    
+   #dropdown{
+        display: inline;
+    }
+
 
 }
 
@@ -142,6 +150,10 @@ and (min-width : 1024px) {
     }
     div#leftnav ul li{
         color: #fff;
+    }
+    
+    #dropdown{
+        display: none;
     }
 }
 
@@ -238,6 +250,9 @@ and (orientation : portrait) {
         position: relative;
         top: 75px;
     }
+       #dropdown{
+        display: none;
+    }
 
 }
 
@@ -299,6 +314,9 @@ and (min-width : 1024px) {
     }
     div#leftnav ul li{
         color: #fff;
+    }
+       #dropdown{
+        display: none;
     }
     
 } 
