--- a/css/app.css
+++ b/css/app.css
@@ -60,6 +60,9 @@ and (min-width : 321px) {
     border-top: 1px solid darkolivegreen;
     }
     
+    #menu{
+        display:none;
+    }
     
     
       ul.navbar-right{
@@ -224,7 +227,6 @@ and (orientation : portrait) {
     position: relative;
     top: 40px;
     left: 0; 
-    max-height: 150px;
     border-bottom: 1px solid darkolivegreen;
     border-top: 1px solid darkolivegreen;
     }
