--- a/css/app.css
+++ b/css/app.css
@@ -227,6 +227,7 @@ and (orientation : portrait) {
     position: relative;
     top: 40px;
     left: 0; 
+    max-height: 150px;
     border-bottom: 1px solid darkolivegreen;
     border-top: 1px solid darkolivegreen;
     }
